--- a/public/shooter.html
+++ b/public/shooter.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Shot your shot</title>
-        <link href="styles.css" rel="stylesheet"/>
-    </head>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css" />
+        <title>Prepare Yourself</title>
+      </head>
     <body>
         <div id = "app" v:bind:style="background-img: url('yay.jpg')">
+
             <div class = "allDone" v-show="ended">
+                {{ formattedTime }}
                 YOU DID IT!
                 <img src="yay.jpg" alt="Celebration">
             </div>
-            <h1 v-if="welcomeText || !(ended)">Hit the Targets</h1>
+            <h1 v-if="welcomeText || !(ended)">Hit The Targets</h1>
+            <button @click="start"></button>
             <div v-for="target in targets">
                     {{target.message}}
                 <div v-on:click.once = "hit(target)" class="" v-bind:style="{top: target.top + 'px', left: target.left + 'px'}" v-bind:class = " target.expand ? ['expand', 'target'] : 'target'"> </div>
             </div>
-            <div v-if="!(ended)" id = "health">
-                <div v-bind:style="{ width: health + '%'}"></div>
-            </div>        
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-        <script src = "script.js"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js" integrity="sha256-mpnrJ5DpEZZkwkE1ZgkEQQJW/46CSEh/STrZKOB/qoM=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.7/vue.js" integrity="sha256-g+Q8DFAmG5+eyRPSydX0LY4TfjsL11XSDrIGerbbEdA=" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
     </body>
 </html>
