Just added some more stuff

--- a/public/shooter.html
+++ b/public/shooter.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <style type="text/css">
+        html {
+            cursor: crosshair;
+        }
+    </style>
     <head>
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <link rel="stylesheet" href="styles.css" />
