added sound effects

--- a/public/shooter.html
+++ b/public/shooter.html
@@ -20,10 +20,20 @@
             </div>
             <h1 v-if="welcomeText || !(ended)">Hit The Targets</h1>
             <button @click="start"></button>
+             
             <div v-for="target in targets">
                     {{target.message}}
-                <div v-on:click.once = "hit(target)" class="" v-bind:style="{top: target.top + 'px', left: target.left + 'px'}" v-bind:class = " target.expand ? ['expand', 'target'] : 'target'"> </div>
+                <div v-on:click.once = "hit(target)" class="" v-bind:style="{top: target.top + 'px', left: target.left + 'px'}" v-bind:class = " target.expand ? ['expand', 'target'] : 'target'">
+                        <embed src="Metal Clang-SoundBible.com-19572601.mp3" autostart="true" loop="true" width="2" height="0">
+                </div>
+
             </div>
+            <div v-if="!(ended)" id="health">
+                    <embed src="Guile_s_theme_extended-JGw8DWctAts.mp3" autostart="true" loop="true" width="2" height="0">
+                </div>   
+                <div v-else>
+                        <embed src="Victory_-_Free_Sound_Effect-yP3yc7EraBU.mp3" autostart="true" loop="false" width="2" height="0">
+                </div>  
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js" integrity="sha256-mpnrJ5DpEZZkwkE1ZgkEQQJW/46CSEh/STrZKOB/qoM=" crossorigin="anonymous"></script>
