--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,17 @@
 </head>
 
 <body>
+    <img src="guns.jpg" class="shells" alt="shells">
   <div id="app">
-    <h1>Shooter.IO</h1>
-    <p>
+    <h1 class="startPage">Shooter.IO</h1>
+    <p class="startPage">
       Click Ten Targets. Try to get the Fastest Time
     </p>
     <form action="shooter.html" @submit="setUsername">
       <button class = "startButton" type ="submit">Start</button>
     </form>
   </div>
-  <div class="footer">
+  <div class="startPage">
     <a href="https://github.com/KingKoa/creativeFinal">GitHub</a>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js" integrity="sha256-mpnrJ5DpEZZkwkE1ZgkEQQJW/46CSEh/STrZKOB/qoM=" crossorigin="anonymous"></script>
