--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
   <title>Enter Creative Game Title</title>
 </head>
 
@@ -14,7 +14,7 @@
       Click Ten Targets. Try to get the Fastest Time
     </p>
     <form action="shooter.html">
-      <button class = "startButton" type ="submit">Start</button>
+      <button class = "button" type ="submit">Start</button>
     </form>
   </div>
   <div class="startPage">
@@ -23,7 +23,7 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js" integrity="sha256-mpnrJ5DpEZZkwkE1ZgkEQQJW/46CSEh/STrZKOB/qoM=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.7/vue.js" integrity="sha256-g+Q8DFAmG5+eyRPSydX0LY4TfjsL11XSDrIGerbbEdA=" crossorigin="anonymous"></script>
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
