--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <div id="app">
     <h1 class="startPage">Shooter.IO</h1>
     <p class="startPage">
-      Click Ten Targets. Try to get the Fastest Time
+      Hit Ten Targets. Try to get the Fastest Time
     </p>
     <form action="shooter.html">
       <button class = "button" type ="submit">Start</button>
